--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* ================================= 
+/* =================================
   Base Element Styles
 ==================================== */
 
@@ -19,7 +19,7 @@ body {
 }
 
 header {
-	text-align: center;  
+	text-align: center;
 }
 
 h1 {
@@ -32,7 +32,7 @@ a {
   text-decoration: none;
 }
 
-/* ================================= 
+/* =================================
   Form Element Styles
 ==================================== */
 
@@ -54,7 +54,7 @@ fieldset {
 
 legend,
 button {
-	font-size: 1.25em;	
+	font-size: 1.25em;
 }
 
 legend {
@@ -78,7 +78,7 @@ label {
 
 input,
 select {
-	margin-bottom: 1.125em;	
+	margin-bottom: 1.125em;
 }
 
 input {
@@ -137,7 +137,27 @@ button:hover {
 	background: #184c62;
 }
 
-/* ================================= 
+.error-message {
+  position: fixed;
+  bottom: 0px;
+  text-align: center;
+  width: 100%;
+}
+
+.error-message > h2 {
+  display: none;
+  color: rgb(252, 104, 104);
+  font-size: 20px;
+  margin: 5px;
+  background-color: rgba(255, 154, 154, .5);
+  padding: 15px;
+}
+
+
+.empty {
+  border: 2px solid red;
+}
+/* =================================
   Page Styles
 ==================================== */
 
@@ -159,7 +179,7 @@ button:hover {
 	margin-top: 1.25em;
 }
 
-/* ================================= 
+/* =================================
   Helper Classes
 ==================================== */
 
@@ -173,7 +193,7 @@ button:hover {
   clear: both;
 }
 
-/* ================================= 
+/* =================================
   Media Queries
 ==================================== */
 
